# Cross-GLDX

./: .clangd  .gitignore  CMakeLists.txt
src/: D3D11Renderer.cpp  D3D11Renderer.h  GLRenderer.cpp  GLRenderer.h  Logger.cpp  Logger.h  OmniLogger.cpp  OmniLogger.h  RendererCore.cpp  RendererCore.h
src/core/: CrossGLDX.h  Logger.cpp  Logger.h  RendererTypes.h  WindowConfig.h
src/renderer/: D3D11Renderer.cpp  D3D11Renderer.h  GLRenderer.cpp  GLRenderer.h  Renderer.cpp  Renderer.h  RendererContext.h  RendererDescriptors.h  RendererHandle.h  ResourcePool.h
src/window/: GlfwWindow.cpp  GlfwWindow.h  Win32Window.cpp  Win32Window.h
tests/: BuildTest.cpp  GlfwWindow.cpp  SyncExample.cpp  WinApiAsync.cpp  WinApiSync.cpp  WinForge.cpp  WinForge.h
